[package]
name = "payment_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3.0"
serde = {version = "1.0.210",features = ["derive"]}
serde_json = "1.0.128"
tokio = { version = "=1.40.0", features = ["full"] }

[dev-dependencies]
tokio = { version = "=1.40.0", features = ["macros", "rt-multi-thread"] }
stringreader = "0.1.1"
